2012-03-13  Release Manager

	* GCC 4.4.7 released.

2012-03-05  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/52430
	* ipa-cp.c (ipcp_initialize_node_lattices): Also consider
	node->local.externally_visible as needed.

2012-03-04  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	Backport from mainline
	2012-03-01  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR target/52408
	* config/pa/pa.md (zvdep_imm32): Change type of variable x from int to
	unsigned HOST_WIDE_INT.
	(zvdep_imm64): Likewise.
	(vdepi_ior): Change type of variable x from int to HOST_WIDE_INT.
	(vdepi_and): Likewise.
	Likewise for unamed 64-bit patterns.
	* config/pa/predicates.md (lhs_lshift_cint_operand): Update comment.

2011-12-19  Quentin Neill  <quentin.neill@amd.com>

	PR target/48743
	* config/i386/driver-i386.c (host_detect_local_cpu): Also check
	family to distinguish PROCESSOR_ATHLON.

2011-11-07  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/f16cintrin: Remove extra _X86INTRIN_H_INCLUDED check.

2011-11-06  Quentin Neill  <quentin.neill@amd.com>

	Fix r180999, update ChangeLog
	* config.gcc: Add f16cintrin.h.
	* config/i386/f16cintrin.h: Add missing endif.

2011-11-05  Quentin Neill  <quentin.neill@amd.com>

	Piledriver f16cintrin.h fix.
	* config/i386/f16cintrin.h: Contents moved from immintrin.h.
	* config/i386/immintrin.h: Include f16cintrin.h.
	* config.gcc (i[34567]86-*-*, x86_64-*-*): Add f16cintrin.h.

2012-01-05  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/51767
	* cfgrtl.c (force_nonfallthru_and_redirect): Force addition
	of jump_block and add an extra edge for degenerated asm gotos.

	PR middle-end/51768
	* stmt.c (check_unique_operand_names): Don't ICE during error
	reporting if i is from labels chain.

2011-12-15  Jakub Jelinek  <jakub@redhat.com>

	PR c/51360
	* c-parser.c (c_parser_omp_clause_num_threads,
	c_parser_omp_clause_schedule): Call mark_exp_read.

2010-12-14  Jakub Jelinek  <jakub@redhat.com>

	PR debug/46885