@@ -1,3 +1,10 @@
+2011-01-21  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/45566
+	* g++.dg/tree-prof/partition3.C: New test.
+
+	* g++.dg/tree-prof/tree-prof.exp: Fix a comment.
+
 2012-03-13  Release Manager
 
 	* GCC 4.4.7 released.
